kubernetes/apps/tools/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: tools
spec:
  ports:
    - port: 80
  selector:
    app: wallabag
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag-db
  namespace: tools
spec:
  ports:
    - port: 5432
  selector:
    app: wallabag-db
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag-redis
  namespace: tools
spec:
  ports:
    - port: 6379
  selector:
    app: wallabag-redis
