kubernetes/apps/tools/wallabag/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag
  namespace: tools
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - wallabag.local.elmurphy.com
  rules:
    - backendRefs:
        - name: wallabag
          port: 80
